[gd_scene load_steps=4 format=3 uid="uid://csb0kvos7rijd"]

[ext_resource type="Script" path="res://Game/Engine/Resources/GameResourcesScene.gd" id="1_o35uh"]
[ext_resource type="Script" path="res://Game/Engine/Resources/Registry/TexturesRegistryNode.gd" id="2_2o2kv"]
[ext_resource type="Script" path="res://Game/Engine/Resources/Registry/TemplatesRegistry.gd" id="3_go16b"]

[node name="GameResourcesScene" type="Node"]
script = ExtResource("1_o35uh")

[node name="TexturesRegistryNode" type="Node" parent="."]
script = ExtResource("2_2o2kv")

[node name="TemplatesRegistryNode" type="Node" parent="."]
script = ExtResource("3_go16b")
